--- a/po/ru.po
+++ b/po/ru.po
@@ -10,7 +10,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2014-02-26 06:49-0500\n"
+"PO-Revision-Date: 2014-07-01 02:46-0400\n"
 "Last-Translator: ypoyarko <ypoyarko@redhat.com>\n"
 "Language-Team: Russian\n"
 "Language: ru\n"
@@ -208,12 +208,12 @@ msgstr "{0} обновил правила в базе данных до верс
 msgid "{0} removed the rules from the database"
 msgstr "{0} удалил правила из базы данных"
 
-#: src/main/java/org/candlepin/resource/UserResource.java:162
+#: src/main/java/org/candlepin/resource/UserResource.java:163
 #, java-format
 msgid "User {0} does not exist"
 msgstr "Пользователь {0} не существует."
 
-#: src/main/java/org/candlepin/resource/UserResource.java:180
+#: src/main/java/org/candlepin/resource/UserResource.java:181
 #, java-format
 msgid "User {0} not found"
 msgstr "Пользователь {0} не найден."
@@ -368,7 +368,7 @@ msgstr "Тип «{0}» не найден."
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:859
 #, java-format
 msgid "Problem updating unit {0}"
-msgstr ""
+msgstr "Не удалось обновить {0}"
 
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:920
 #, java-format
@@ -509,7 +509,7 @@ msgstr "Не найден пул {0}."
 
 #: src/main/java/org/candlepin/resource/GuestIdResource.java:168
 msgid "Please supply a valid guest id"
-msgstr ""
+msgstr "Укажите действительный идентификатор гостя"
 
 #: src/main/java/org/candlepin/resource/GuestIdResource.java:184
 #, java-format
@@ -524,7 +524,7 @@ msgstr "Гость UUID {0} не найден."
 # translation auto-copied from project Candlepin, version master, document
 # keys
 #: src/main/java/org/candlepin/resource/GuestIdResource.java:261
-#: src/main/java/org/candlepin/resteasy/interceptor/BasicAuth.java:73
+#: src/main/java/org/candlepin/resteasy/interceptor/BasicAuth.java:72
 msgid "Invalid Credentials"
 msgstr "Недопустимые реквизиты"
 
@@ -579,12 +579,12 @@ msgstr "Не найдена подписка с ID {0}"
 #: src/main/java/org/candlepin/resource/HypervisorResource.java:130
 #, java-format
 msgid "Unable to find hypervisor in org ''{0}''"
-msgstr ""
+msgstr "Не найден гипервизор в организации «{0}»"
 
 #: src/main/java/org/candlepin/resource/HypervisorResource.java:139
 #, java-format
 msgid "Hypervisor ''{0}'' is in use by another org"
-msgstr ""
+msgstr "Гипервизор «{0}» используется другой организацией"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author ypoyarko
@@ -765,7 +765,7 @@ msgstr "задание уже отменено"
 
 #: src/main/java/org/candlepin/resource/JobResource.java:227
 msgid "cannot cancel a job that is in a finished state"
-msgstr ""
+msgstr "завершенное задание не может быть отменено"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author ypoyarko
@@ -906,7 +906,7 @@ msgstr "Используется с другими подписками"
 msgid ""
 "Activation keys can only use consumer type restricted pools for a single "
 "consumer type."
-msgstr ""
+msgstr "Ключи активации должны использовать пулы для заданного типа клиента."
 
 #: src/main/java/org/candlepin/policy/js/activationkey/ActivationKeyRules.java:81
 msgid ""
@@ -919,6 +919,8 @@ msgid ""
 "Cannot use pools with host restriction with physical only pools on a single "
 "activation key"
 msgstr ""
+"Нельзя использовать пулы, если хост ограничивается только физическими пулами "
+"для одного ключа активации "
 
 #: src/main/java/org/candlepin/policy/js/activationkey/ActivationKeyRules.java:89
 msgid "Activation keys can only use host restricted pools from a single host."
@@ -927,7 +929,7 @@ msgstr "Ключи активации должны использовать пу
 #: src/main/java/org/candlepin/policy/js/activationkey/ActivationKeyRules.java:93
 #, java-format
 msgid "Multi-entitlement not supported for pool ''{0}''"
-msgstr ""
+msgstr "Пул «{0}» не поддерживает многократные полномочия."
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author ypoyarko
@@ -957,23 +959,29 @@ msgid ""
 "Activation keys for physical systems can only use quantities of pool ''{0}'' "
 "evenly divisible by {1}"
 msgstr ""
+"Числа из пула «{0}» для ключей активации физических систем должны быть "
+"кратны  {1}"
 
 #: src/main/java/org/candlepin/policy/js/activationkey/ActivationKeyRules.java:116
 #, java-format
 msgid ""
 "Cannot add virtual pool ''{0}'' to activation key for physical systems."
 msgstr ""
+"Вы не можете добавить виртуальный пул «{0}» к ключу активации физической "
+"системы."
 
 #: src/main/java/org/candlepin/policy/js/activationkey/ActivationKeyRules.java:120
 #, java-format
 msgid ""
 "Cannot add physical pool ''{0}'' to activation key for virtual systems."
 msgstr ""
+"Вы не можете добавить физический пул «{0}» к ключу активации виртуальной "
+"системы."
 
 #: src/main/java/org/candlepin/util/ServiceLevelValidator.java:67
 #, java-format
 msgid "Service level ''{0}'' is not available to units of organization {1}."
-msgstr "Уровень обслуживания «{0}» недоступен группам организации {1}."
+msgstr "Уровень обслуживания «{0}» не доступен группам организации {1}."
 
 #: src/main/java/org/candlepin/util/ContentOverrideValidator.java:58
 #, java-format
@@ -1002,7 +1010,7 @@ msgstr "Ошибка выполнения {0}"
 #: src/main/java/org/candlepin/exceptions/mappers/BadRequestExceptionMapper.java:57
 #, java-format
 msgid "Invalid format for query parameter {0}. Expected format: {1}"
-msgstr "Неверный формат параметра запроса {0}. Допускается: {1}"
+msgstr "Неверный формат параметра запроса {0}. Допустимый формат: {1}"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys
@@ -1047,7 +1055,7 @@ msgstr "Пустой архив consumer_export"
 
 #: src/main/java/org/candlepin/sync/Importer.java:300
 msgid "The archive does not contain the required consumer_export.zip file"
-msgstr "Архив не содержит обязательный файл consumer_export.zip"
+msgstr "Архив должен содержать файл consumer_export.zip"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author ypoyarko
@@ -1062,7 +1070,7 @@ msgstr "Не удалось извлечь архив"
 
 #: src/main/java/org/candlepin/sync/Importer.java:321
 msgid "Certificate exception checking archive signature"
-msgstr "Исключение сертификата при проверке подписи"
+msgstr "Произошло исключение при проверке подписи"
 
 #: src/main/java/org/candlepin/sync/Importer.java:344
 msgid "The archive does not contain the required meta.json file"
@@ -1105,89 +1113,91 @@ msgstr ""
 # keys, author ypoyarko
 #: src/main/java/org/candlepin/sync/EntitlementImporter.java:162
 msgid "Unable to find product with ID: "
-msgstr "Не найден продукт с ID:"
+msgstr "Нет продукта с ID:"
 
 #: src/main/java/org/candlepin/hibernate/CandlepinMessageInterpolator.java:40
 msgid "must be false"
-msgstr ""
+msgstr "должно быть False"
 
 #: src/main/java/org/candlepin/hibernate/CandlepinMessageInterpolator.java:42
 msgid "must be true"
-msgstr ""
+msgstr "должно быть True"
 
 #: src/main/java/org/candlepin/hibernate/CandlepinMessageInterpolator.java:44
 #: src/main/java/org/candlepin/hibernate/CandlepinMessageInterpolator.java:57
 #, java-format
 msgid "must be less than or equal to {0}"
-msgstr ""
+msgstr "не может быть больше {0}"
 
 #: src/main/java/org/candlepin/hibernate/CandlepinMessageInterpolator.java:47
 #: src/main/java/org/candlepin/hibernate/CandlepinMessageInterpolator.java:60
 #, java-format
 msgid "must be greater than or equal to {0}"
-msgstr ""
+msgstr "не может быть меньше {0}"
 
 #: src/main/java/org/candlepin/hibernate/CandlepinMessageInterpolator.java:51
 msgid ""
 "numeric value out of bounds (<{integer} digits>.<{fraction} digits> "
 "expected)"
 msgstr ""
+"число выходит за пределы допустимого диапазона (ожидается <{integer} digits>."
+"<{fraction} digits>)"
 
 #: src/main/java/org/candlepin/hibernate/CandlepinMessageInterpolator.java:55
 msgid "must be in the future"
-msgstr ""
+msgstr "должно быть в будущем"
 
 #: src/main/java/org/candlepin/hibernate/CandlepinMessageInterpolator.java:63
 msgid "may not be null"
-msgstr ""
+msgstr "не может быть NULL"
 
 #: src/main/java/org/candlepin/hibernate/CandlepinMessageInterpolator.java:65
 msgid "must be null"
-msgstr ""
+msgstr "должно быть NULL"
 
 #: src/main/java/org/candlepin/hibernate/CandlepinMessageInterpolator.java:67
 msgid "must be in the past"
-msgstr ""
+msgstr "должно быть в прошлом"
 
 #: src/main/java/org/candlepin/hibernate/CandlepinMessageInterpolator.java:69
 msgid "must match ''{regexp}''"
-msgstr ""
+msgstr "должно соответствовать «{regexp}»"
 
 #: src/main/java/org/candlepin/hibernate/CandlepinMessageInterpolator.java:72
 #: src/main/java/org/candlepin/hibernate/CandlepinMessageInterpolator.java:79
 #, java-format
 msgid "size must be between {0} and {1}"
-msgstr ""
+msgstr "размер должен быть в пределах {0} - {1}"
 
 #: src/main/java/org/candlepin/hibernate/CandlepinMessageInterpolator.java:75
 msgid "invalid credit card number"
-msgstr ""
+msgstr "недействительный номер кредитной карты"
 
 #: src/main/java/org/candlepin/hibernate/CandlepinMessageInterpolator.java:77
 msgid "not a well-formed email address"
-msgstr ""
+msgstr "недопустимый формат электронного адреса"
 
 #: src/main/java/org/candlepin/hibernate/CandlepinMessageInterpolator.java:82
 #: src/main/java/org/candlepin/hibernate/CandlepinMessageInterpolator.java:84
 msgid "may not be empty"
-msgstr ""
+msgstr "не может быть пустым"
 
 #: src/main/java/org/candlepin/hibernate/CandlepinMessageInterpolator.java:86
 msgid "must be between {min} and {max}"
-msgstr ""
+msgstr "может быть от {min} до {max}"
 
 #: src/main/java/org/candlepin/hibernate/CandlepinMessageInterpolator.java:89
 msgid "may have unsafe html content"
-msgstr ""
+msgstr "возможно, содержит небезопасное содержимое HTML"
 
 #: src/main/java/org/candlepin/hibernate/CandlepinMessageInterpolator.java:91
 #, java-format
 msgid "script expression ''{0}'' didn't evaluate to true"
-msgstr ""
+msgstr "выражение «{0}» не возвращает True"
 
 #: src/main/java/org/candlepin/hibernate/CandlepinMessageInterpolator.java:94
 msgid "must be a valid URL"
-msgstr ""
+msgstr "должен содержать действительный URL"
 
 #: src/main/java/org/candlepin/resteasy/interceptor/ConsumerAuth.java:57
 #: src/main/java/org/candlepin/resteasy/interceptor/AuthInterceptor.java:550
@@ -1197,7 +1207,7 @@ msgstr "Группа {0} удалена."
 
 # translation auto-copied from project Candlepin, version master, document
 # keys
-#: src/main/java/org/candlepin/resteasy/interceptor/BasicAuth.java:88
+#: src/main/java/org/candlepin/resteasy/interceptor/BasicAuth.java:87
 msgid "Error contacting user service"
 msgstr "Ошибка обращения к службе пользователя"
 
@@ -1409,7 +1419,7 @@ msgstr "Не удалось назначить подписку продукту
 
 #: src/main/java/org/candlepin/model/RulesCurator.java:104
 msgid "No rules file found in the database"
-msgstr ""
+msgstr "Файл правил в базе данных не найден"
 
 #: src/main/java/org/candlepin/model/ProductCurator.java:143
 #, java-format
