--- a/gutterball/po/de.po
+++ b/gutterball/po/de.po
@@ -1,151 +1,132 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-#, fuzzy
-msgid ""
-msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-12-03 19:16-0500\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
-"Content-Transfer-Encoding: 8bit\n"
-
 #: gutterball/src/main/java/org/candlepin/gutterball/model/Status.java:42
 msgid "Unknown"
-msgstr ""
+msgstr "[GERMAN] Unknown"
 
 #: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerStatusReport.java:47
 msgid "List the status of all consumers"
-msgstr ""
+msgstr "[GERMAN] List the status of all consumers"
 
 #: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerStatusReport.java:57
 #: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerTrendReport.java:59
 msgid "Filters the results by the specified consumer UUID."
-msgstr ""
+msgstr "[GERMAN] Filters the results by the specified consumer UUID."
 
 #: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerStatusReport.java:63
 #: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerTrendReport.java:65
 msgid "The Owner key(s) to filter on."
-msgstr ""
+msgstr "[GERMAN] The Owner key(s) to filter on."
 
 #: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerStatusReport.java:68
 msgid "The subscription status to filter on."
-msgstr ""
+msgstr "[GERMAN] The subscription status to filter on."
 
 #: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerStatusReport.java:74
 msgid "The date to filter on. Defaults to NOW."
-msgstr ""
+msgstr "[GERMAN] The date to filter on. Defaults to NOW."
 
 #: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerTrendReport.java:49
 msgid "Lists the status of each consumer over a date range"
-msgstr ""
+msgstr "[GERMAN] Lists the status of each consumer over a date range"
 
 #: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerTrendReport.java:70
 msgid "The number of hours to filter on (used indepent of date range)."
-msgstr ""
+msgstr "[GERMAN] The number of hours to filter on (used indepent of date range)."
 
 #: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerTrendReport.java:76
 #, java-format
 msgid "The start date to filter on (used with {0})."
-msgstr ""
+msgstr "[GERMAN] The start date to filter on (used with {0})."
 
 #: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerTrendReport.java:83
 #, java-format
 msgid "The end date to filter on (used with {0})"
-msgstr ""
+msgstr "[GERMAN] The end date to filter on (used with {0})"
 
 #: gutterball/src/main/java/org/candlepin/gutterball/report/ParameterDescriptor.java:141
 msgid "Required parameter."
-msgstr ""
+msgstr "[GERMAN] Required parameter."
 
 #: gutterball/src/main/java/org/candlepin/gutterball/report/ParameterDescriptor.java:168
 #, java-format
 msgid "Parameter must not be used with {0}."
-msgstr ""
+msgstr "[GERMAN] Parameter must not be used with {0}."
 
 #: gutterball/src/main/java/org/candlepin/gutterball/report/ParameterDescriptor.java:177
 #, java-format
 msgid "Parameter must be used with {0}."
-msgstr ""
+msgstr "[GERMAN} Parameter must be used with {0}."
 
 #: gutterball/src/main/java/org/candlepin/gutterball/report/ParameterDescriptor.java:189
 msgid "Parameter must be an Integer value."
-msgstr ""
+msgstr "[GERMAN] Parameter must be an Integer value."
 
 #: gutterball/src/main/java/org/candlepin/gutterball/report/ParameterDescriptor.java:202
 #, java-format
 msgid "Invalid date string. Expected format: {0}"
-msgstr ""
+msgstr "[GERMAN] Invalid date string. Expected format: {0}"
 
 #: gutterball/src/main/java/org/candlepin/gutterball/report/StatusReasonMessageGenerator.java:60
 msgid "Not supported by a valid subscription."
-msgstr ""
+msgstr "[GERMAN] Not supported by a valid subscription."
 
 #: gutterball/src/main/java/org/candlepin/gutterball/report/StatusReasonMessageGenerator.java:63
 #, java-format
 msgid "Supports architecture {0} but the system is {1}."
-msgstr ""
+msgstr "[GERMAN] Supports architecture {0} but the system is {1}."
 
 #: gutterball/src/main/java/org/candlepin/gutterball/report/StatusReasonMessageGenerator.java:68
 #, java-format
 msgid "Only supports {0} of {1} sockets."
-msgstr ""
+msgstr "[GERMAN] Only supports {0} of {1} sockets."
 
 #: gutterball/src/main/java/org/candlepin/gutterball/report/StatusReasonMessageGenerator.java:73
 #, java-format
 msgid "Only supports {0} of {1} cores."
-msgstr ""
+msgstr "[GERMAN] Only supports {0} of {1} cores."
 
 #: gutterball/src/main/java/org/candlepin/gutterball/report/StatusReasonMessageGenerator.java:78
 #, java-format
 msgid "Only supports {0}GB of {1}GB of RAM."
-msgstr ""
+msgstr "[GERMAN] Only supports {0}GB of {1}GB of RAM."
 
 #: gutterball/src/main/java/org/candlepin/gutterball/report/StatusReasonMessageGenerator.java:83
 #, java-format
 msgid "Only supports {0} of {1} virtual guests."
-msgstr ""
+msgstr "[GERMAN] Only supports {0} of {1} virtual guests."
 
 #: gutterball/src/main/java/org/candlepin/gutterball/report/StatusReasonMessageGenerator.java:88
 #, java-format
 msgid "Only supports {0} of {1} vCPUs."
-msgstr ""
+msgstr "[GERMAN] Only supports {0} of {1} vCPUs."
 
 #: gutterball/src/main/java/org/candlepin/gutterball/report/StatusReasonMessageGenerator.java:93
 #, java-format
 msgid "{2} COVERAGE PROBLEM.  Supports {0} of {1}"
-msgstr ""
+msgstr "[GERMAN] {2} COVERAGE PROBLEM.  Supports {0} of {1}"
 
 #: gutterball/src/main/java/org/candlepin/gutterball/resteasy/interceptor/OAuthInterceptor.java:162
 msgid "No credentials provided"
-msgstr ""
+msgstr "[GERMAN] No credentials provided"
 
 #: gutterball/src/main/java/org/candlepin/gutterball/resteasy/interceptor/OAuthInterceptor.java:170
 #: gutterball/src/main/java/org/candlepin/gutterball/resteasy/interceptor/OAuthInterceptor.java:183
 msgid "Invalid OAuth unit or secret"
-msgstr ""
+msgstr "[GERMAN] Invalid OAuth unit or secret"
 
 #: gutterball/src/main/java/org/candlepin/gutterball/resteasy/interceptor/OAuthInterceptor.java:187
 #, java-format
 msgid "OAuth problem encountered. Internal message is: {0}"
-msgstr ""
+msgstr "[GERMAN] OAuth problem encountered. Internal message is: {0}"
 
 #: gutterball/src/main/java/org/candlepin/gutterball/resteasy/interceptor/OAuthInterceptor.java:193
 #, java-format
 msgid "OAuth error encountered. Internal message is: {0}"
-msgstr ""
+msgstr "[GERMAN] OAuth error encountered. Internal message is: {0}"
 
 #: gutterball/src/main/java/org/candlepin/gutterball/resteasy/interceptor/OAuthInterceptor.java:255
 msgid "message is null"
-msgstr ""
+msgstr "[GERMAN] message is null"
 
 #: gutterball/src/main/java/org/candlepin/gutterball/resteasy/interceptor/OAuthInterceptor.java:262
 msgid "Error getting OAuth unit key"
-msgstr ""
+msgstr "[GERMAN] Error getting OAuth unit key"
